--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openai/agents": "^0.0.7",
     "@openai/agents-realtime": "^0.0.7",
     "next": "14.2.3",
     "react": "^18",
